# sandboxes

./: README.md  dprint.json
next-auth-with-tonic/auth-server/: Cargo.toml  auth.proto  build.rs
next-auth-with-tonic/auth-server/src/: main.rs
next-auth-with-tonic/front/: package-lock.json
py/gene-annotator/: README.md  input.json  pyproject.toml
py/gene-annotator/src/gene_annotator/: __init__.py  annotator.py  main.py  schema.py  sequence_data.py
py/gene-annotator/tests/: input.json  input_with_translation.json
py/goterm_plot/: .gitignore  basic_semantic_similarity_network.py  pyproject.toml
rs/sqlx_test/: Cargo.toml
