[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "time", "uuid"] }
time = { version = "0.3.21", features = ["serde"] }
tonic = "0.9.2"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
