[tool.poetry]
name = "goterm_plot"
version = "0.1.0"
description = ""
authors = ["illumination-k <illumination.k.27@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
goatools = "^1.3.1"
numpy = "^1.24.3"
polars = "^0.17.13"
networkx = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
